[gd_scene load_steps=3 format=3 uid="uid://promotion_dialog_uid"]

[ext_resource type="Script" path="res://scenes/dialogs/promotion_dialog.gd" id="1_promo"]
[ext_resource type="Theme" path="res://themes/dialog_theme.tres" id="2_dialog_theme"]

[node name="PromotionDialog" type="PopupPanel"]
initial_position = 1
size = Vector2i(500, 250)
transparent_bg = false
visible = true
transparent = false
theme = ExtResource("2_dialog_theme")
script = ExtResource("1_promo")

[node name="VBox" type="VBoxContainer" parent="."]
offset_left = 16.0
offset_top = 16.0
offset_right = 484.0
offset_bottom = 234.0

[node name="TitleLabel" type="Label" parent="VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "ðŸŽ‰ PROMOTION! ðŸŽ‰"
horizontal_alignment = 1

[node name="MessageLabel" type="Label" parent="VBox"]
layout_mode = 2
size_flags_vertical = 3
text = "You've been promoted!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="ContinueButton" type="Button" parent="VBox"]
layout_mode = 2
text = "Continue"
